syntax = "proto3";
package main;

option go_package = "./;_";
import "google/protobuf/timestamp.proto";

message listUUID {
  string value = 1;
}

message UserWithList {
  string listUUID = 1;
  string UserWithListUUID = 2;
}

message UsersUUID {
  string value = 1;
}

message ListName {
  string name = 1;
  string creatorId = 2;
}

message ListResponse {
  string value = 1;
}

message ListTwit {
  listUUID id = 1;
  google.protobuf.Timestamp date = 2;
  string text = 3;
  string nickname = 4;
}

service ListService {
  rpc getLists(UsersUUID) returns (stream ListName);
  rpc createCustomList(ListName) returns (ListResponse);
  rpc addUserToCustomList(UserWithList) returns (ListResponse);
  rpc removeUserFromCustomList(UserWithList) returns (ListResponse);
  rpc getListUsers(listUUID) returns (ListResponse);
  rpc getUsersTwitsFromCustomList(listUUID) returns (stream ListTwit);
  rpc deleteCustomList(listUUID) returns (ListResponse);
}
